--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.9",
     "@react-email/components": "^0.0.32",
+    "ai": "^4.1.16",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.5",
     "next": "15.1.6",
